# bottomtime

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/bottomtime/: __init__.py  api.py  cli.py  plot.py
src/bottomtime/decode/: pnf.py
src/bottomtime/ingest/: archive.py  garmin_fit.py  shearwater_db.py  shearwater_xml.py
src/bottomtime/match/: correlate.py  matcher.py
src/bottomtime/store/: db.py  schema.py
src/bottomtime/verify/: crosscheck.py
tests/: test_cli.py  test_correlate.py  test_decoder_dependency.py  test_pnf.py
