[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bottomtime"
version = "0.2.0"
description = "Lossless dive-log store: ingest, decode, and reconcile dives from Garmin (FIT) and Shearwater (Petrel Native Format) dive computers"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Snehan Kekre" }]
keywords = ["diving", "scuba", "dive-log", "garmin", "shearwater", "fit", "uddf", "decompression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = ["garmin-fit-sdk>=21.0"]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
dev = ["pytest"]

[project.scripts]
bottomtime = "bottomtime.cli:main"

[project.urls]
Homepage = "https://github.com/snehankekre/bottomtime"
Issues = "https://github.com/snehankekre/bottomtime/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bottomtime"]
