[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bottomtime"
version = "0.4.0"
description = "Lossless dive-log store: ingest, decode, and reconcile dives from Garmin (FIT) and Shearwater (Petrel Native Format) dive computers"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Snehan Kekre" }]
keywords = ["diving", "scuba", "dive-log", "garmin", "shearwater", "fit", "uddf", "decompression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = ["garmin-fit-sdk>=21.0", "pnf>=0.1.0"]

[project.optional-dependencies]
plot = ["matplotlib>=3.5"]
dev = ["pytest"]

[project.scripts]
bottomtime = "bottomtime.cli:main"

[project.urls]
Homepage = "https://github.com/snehankekre/bottomtime"
Issues = "https://github.com/snehankekre/bottomtime/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bottomtime"]

[tool.hatch.build.targets.sdist]
# Positive allowlist: the sdist ships only the package, its tests, and the
# standard metadata files, so local tooling and CI config stay out of releases.
include = ["/src", "/tests", "/README.md", "/LICENSE"]
